REFACTOR root shell